--- a/brief/brief.tex
+++ b/brief/brief.tex
@@ -63,7 +63,7 @@
 }\makeatother
 
 % Anlagentext (Doppelpunkt wird automatisch gesetzt)
-\setkomavar*{enclseparator}{Anlage}
+%\setkomavar*{enclseparator}{Anlage}
 
 % Trennzeichen bei Rücksendeadresse
 %\setkomavar{backaddressseparator}{ · }
@@ -88,7 +88,7 @@ hiermit kündige ich meinen Vertrag mit der Kundennummer \customer{} fristgerech
 Bitte senden Sie mir unter Angabe des Beendigungsdatums eine schriftliche Bestätigung der Kündigung zu.
 
 \closing{Mit freundlichen Grüßen,}
-%\encl{Eine Anlage}
+%\encl{Eine Anlage \\ Noch eine Anlage}
 \end{letter}
 
 
