Adjust position of fromaddress

--- a/brief/brief.tex
+++ b/brief/brief.tex
@@ -29,7 +29,7 @@
 
 % KOPF
 \makeatletter\setkomavar{firsthead}{
-  \hspace*{\fill}\footnotesize
+  \hspace*{.75\useplength{firstheadwidth}}\footnotesize
   \begin{tabular}{l@{}}
     \normalsize\usekomavar{fromname}\\
     \usekomavar{fromaddress}\\\\
