--- a/brief/brief.tex
+++ b/brief/brief.tex
@@ -73,7 +73,7 @@
 
 \opening{Sehr geehrte Damen und Herren,}
 
-hiermit kündige ich meinen Vertrag mit der Kundennummer \customer{} fristgerecht zum nächstmöglichen Zeitpunkt.
+hiermit kündige ich meinen Vertrag mit der Kundennummer \customer{} fristgerecht zum nächstmöglichen Zeitpunkt.\\\\
 Bitte lassen Sie mir unter Angabe des Vertragsendes eine schriftliche Kündigungsbestätigung zukommen.
 
 \closing{Mit freundlichen Grüßen,}
